# Optimizing-Marine-Waste-Collection

./: README.md
GeneticAlgo/libs/genetic-algorithm/: Cargo.toml
GeneticAlgo/libs/genetic-algorithm/src/: lib.rs
GeneticAlgo/libs/neural-network/: Cargo.toml
GeneticAlgo/libs/neural-network/src/: lib.rs
GeneticAlgo/libs/simulation/: Cargo.toml
GeneticAlgo/libs/simulation-wasm/: Cargo.toml
GeneticAlgo/libs/simulation-wasm/src/: lib.rs
GeneticAlgo/libs/simulation/src/: brain.rs  collector.rs  collector_individual.rs  eye.rs  lib.rs  sea.rs  waste.rs
GeneticAlgo/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
GeneticAlgo/www/src/: acquisitions.js
